--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@storybook/addon-links": "^6.0.10",
     "@storybook/react": "^6.0.10",
     "babel-loader": "^8.1.0",
-    "react-is": "^16.13.1"
+    "css-loader": "^4.2.1",
+    "react-is": "^16.13.1",
+    "style-loader": "^1.2.1"
   }
 }
