--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "icon": "svgr assets/icons -d components/icons --icon"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "@storybook/addon-essentials": "^6.0.10",
     "@storybook/addon-links": "^6.0.10",
     "@storybook/react": "^6.0.10",
+    "@svgr/cli": "^5.4.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
     "react-is": "^16.13.1",
