--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@svgr/cli": "^5.4.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
+    "prettier": "^2.1.2",
     "react-is": "^16.13.1",
     "style-loader": "^1.2.1"
   }
